--- a/src/components/Header/Header.module.scss
+++ b/src/components/Header/Header.module.scss
@@ -6,14 +6,24 @@
   }
 
   &__header {
+    margin: 0 auto;
+    width: 1400px;
+    background-color: lightgray;
     align-items: center;
-    width: 100%;
     display: flex;
     flex-direction: row;
     justify-content: space-around;
-    font-size: calc(10px + 2vmin);
+    font-size: calc(9px + 2vmin);
+  }
+  
+  &__left {
+    padding-left: 2rem;
   }
 
+  &__right {
+    padding-right: 2rem;
+  }
+  
   &__ul {
     list-style-type: none;
     margin: 0;
@@ -23,6 +33,10 @@
 
   &__li {
     float: left;
+  }
+
+  &__font {
+    font-size: 4px;
   }
 
   &__dropdown {
