--- a/src/components/Header/Header.module.scss
+++ b/src/components/Header/Header.module.scss
@@ -7,8 +7,10 @@
 
   &__header {
     margin: 0 auto;
+    padding-top: 10px;
     width: 1400px;
-    background-color: lightgray;
+    height: 60px;
+    background-color: darkgray;
     align-items: center;
     display: flex;
     flex-direction: row;
@@ -17,11 +19,11 @@
   }
   
   &__left {
-    padding-left: 2rem;
+    padding-left: 0rem;
   }
 
   &__right {
-    padding-right: 2rem;
+    padding-right: 0rem;
   }
   
   &__ul {
@@ -59,7 +61,7 @@
     right: 0;
     background-color: #f9f9f9;
     min-width: 160px;
-    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    box-shadow: 0px 8px 10px 0px rgba(0,0,0,0.2);
     z-index: 1;
   }
 
