--- a/src/components/Textfield/TextField.module.scss
+++ b/src/components/Textfield/TextField.module.scss
@@ -16,6 +16,11 @@
     padding: 0 1rem;
   }
 
+  &__box{
+    margin-top: 1rem;
+    margin-bottom: 1rem;
+  }
+
   &__footer {
     padding: 1rem;
     border-top: 1px solid #333;
