--- a/src/components/Verkefni/Verkefni.module.scss
+++ b/src/components/Verkefni/Verkefni.module.scss
@@ -15,6 +15,11 @@
     margin-bottom: 1rem;
     padding: 0 1rem;
   }
+  
+  &__box{
+    margin-top: 1rem;
+    margin-bottom: 1rem;
+  }
 
   &__footer {
     padding: 1rem;
